[gd_scene load_steps=42 format=3 uid="uid://dukho3wja08su"]

[ext_resource type="Script" path="res://card_scenes/cardFlip.gd" id="1_ocqbr"]
[ext_resource type="Texture2D" uid="uid://cpxh0splux2kg" path="res://images/card_images/general/standardcard-back.png" id="3_nal1o"]
[ext_resource type="Texture2D" uid="uid://b68bau51o15yi" path="res://images/card_images/general/redcard-back.png" id="4_rd7a2"]
[ext_resource type="Texture2D" uid="uid://b3d3eqfyx0ihs" path="res://images/card_images/general/bluecard-back.png" id="5_ubw2l"]
[ext_resource type="Texture2D" uid="uid://cmig4fpomrmpq" path="res://images/card_images/general/DefendCardBack.png" id="5_xmgio"]
[ext_resource type="Texture2D" uid="uid://dv401rqumemwa" path="res://images/UI_images/close_button.png" id="6_0e2l7"]
[ext_resource type="FontFile" uid="uid://duv0rbeynolx2" path="res://pixel font/kongtext.ttf" id="6_3juvv"]
[ext_resource type="Theme" uid="uid://b5n6bvst5x6at" path="res://card_scenes/card_button_theme.tres" id="6_4fe4i"]
[ext_resource type="Texture2D" uid="uid://bvc6nttjgbhfr" path="res://images/UI_images/expand_button.png" id="6_aj1ct"]
[ext_resource type="Texture2D" uid="uid://qjmh8ts7gnnr" path="res://images/card_images/general/AttackCardBack.png" id="6_xgg8t"]
[ext_resource type="Texture2D" uid="uid://c1jce2nhkjuxi" path="res://images/card_images/general/Clock.png" id="8_f0d6h"]
[ext_resource type="Theme" uid="uid://bsacj2o8glxjs" path="res://pixel font/small_font_theme.tres" id="9_mtckg"]
[ext_resource type="Texture2D" uid="uid://blthi0lxo6ts5" path="res://images/UI_images/flip_button.png" id="11_1sp60"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eob0r"]
atlas = ExtResource("5_xmgio")
region = Rect2(0, 0, 825, 1155)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpkc1"]
atlas = ExtResource("6_xgg8t")
region = Rect2(0, 0, 825, 1155)

[sub_resource type="SpriteFrames" id="SpriteFrames_fgt5r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nal1o")
}, {
"duration": 1.0,
"texture": ExtResource("4_rd7a2")
}, {
"duration": 1.0,
"texture": ExtResource("5_ubw2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eob0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpkc1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aphlv"]

[sub_resource type="Theme" id="Theme_u32eo"]
default_font = ExtResource("6_3juvv")
default_font_size = 25
RichTextLabel/colors/default_color = Color(1, 1, 1, 0)
RichTextLabel/styles/normal = SubResource("StyleBoxEmpty_aphlv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p0gi6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3bc5"]
atlas = ExtResource("8_f0d6h")
region = Rect2(0, 92, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cm0j"]
atlas = ExtResource("8_f0d6h")
region = Rect2(31, 92, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_f02ux"]
atlas = ExtResource("8_f0d6h")
region = Rect2(62, 92, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_kemrh"]
atlas = ExtResource("8_f0d6h")
region = Rect2(93, 92, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5n2k"]
atlas = ExtResource("8_f0d6h")
region = Rect2(0, 46, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fxwf"]
atlas = ExtResource("8_f0d6h")
region = Rect2(31, 46, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8x0s"]
atlas = ExtResource("8_f0d6h")
region = Rect2(62, 46, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ptxc"]
atlas = ExtResource("8_f0d6h")
region = Rect2(93, 46, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnm6k"]
atlas = ExtResource("8_f0d6h")
region = Rect2(0, 0, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkye2"]
atlas = ExtResource("8_f0d6h")
region = Rect2(31, 0, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2gh8"]
atlas = ExtResource("8_f0d6h")
region = Rect2(62, 0, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7pxq"]
atlas = ExtResource("8_f0d6h")
region = Rect2(93, 0, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_mysc1"]
atlas = ExtResource("8_f0d6h")
region = Rect2(0, 138, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0nwk"]
atlas = ExtResource("8_f0d6h")
region = Rect2(31, 138, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3gky"]
atlas = ExtResource("8_f0d6h")
region = Rect2(62, 138, 31, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5ekd"]
atlas = ExtResource("8_f0d6h")
region = Rect2(93, 138, 31, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ybv1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3bc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cm0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f02ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kemrh")
}],
"loop": true,
"name": &"0.25",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5n2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fxwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8x0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ptxc")
}],
"loop": true,
"name": &"0.75",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnm6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkye2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2gh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7pxq")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mysc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0nwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3gky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5ekd")
}],
"loop": true,
"name": &"none",
"speed": 4.0
}, {
"frames": [],
"loop": true,
"name": &"nothing",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_2h8i5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card/card_back:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("card/definition:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("card/Dollar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("card/Clock:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("card/Time:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("card/Maturity:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("card/sliders:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="Animation_noan5"]
resource_name = "card_flip"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card/card_back:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.156818, 0.18467),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("card/definition:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.190245, 0.214989, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("card/Dollar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1902, 0.215, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("card/Clock:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.190169, 0.215, 0.40057),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("card/Time:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1902, 0.215, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("card/Maturity:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.190951, 0.218074, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("card/sliders:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.192019, 0.218575, 0.402233),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [true, true, false, false]
}

[sub_resource type="Animation" id="Animation_gsarn"]
resource_name = "end_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card/card_back:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-2, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.07, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("card/Dollar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.293158, 0.310288),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("card/Clock:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2932, 0.3103),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("card/Time:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2932, 0.3103),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("card/Maturity:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.293402, 0.31102),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("card/sliders:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.295179, 0.311493),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_86bif"]
resource_name = "start_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.105, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card/card_back:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("card/Dollar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.294678, 0.309528),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("card/Clock:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2947, 0.3095),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("card/Time:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2947, 0.3095),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("card/Maturity:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.295435, 0.311698),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("card/sliders:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2962, 0.313563),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bpgj4"]
_data = {
"RESET": SubResource("Animation_2h8i5"),
"card_flip": SubResource("Animation_noan5"),
"end_flip": SubResource("Animation_gsarn"),
"start_flip": SubResource("Animation_86bif")
}

[node name="Node2D4" type="Node2D"]
script = ExtResource("1_ocqbr")

[node name="card" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("3_nal1o")

[node name="card_back" type="AnimatedSprite2D" parent="card"]
z_index = -1
sprite_frames = SubResource("SpriteFrames_fgt5r")

[node name="definition" type="Label" parent="card"]
offset_left = -268.0
offset_top = -437.0
offset_right = 299.0
offset_bottom = 449.0
theme = SubResource("Theme_u32eo")
theme_override_styles/normal = SubResource("StyleBoxFlat_p0gi6")
autowrap_mode = 3

[node name="Dollar" type="Sprite2D" parent="card"]
position = Vector2(-178.847, 260)
scale = Vector2(0.45, 0.577)

[node name="Clock" type="AnimatedSprite2D" parent="card"]
position = Vector2(157, 265)
scale = Vector2(3.89, 3.89)
sprite_frames = SubResource("SpriteFrames_4ybv1")
animation = &"nothing"

[node name="Maturity" type="Sprite2D" parent="card"]
position = Vector2(-3, 260)
scale = Vector2(0.45, 0.577)

[node name="Time" type="RichTextLabel" parent="card"]
visible = false
offset_left = 75.0
offset_top = 375.0
offset_right = 359.0
offset_bottom = 459.0
theme = ExtResource("9_mtckg")
theme_override_font_sizes/normal_font_size = 30

[node name="sliders" type="Node2D" parent="card"]

[node name="cost_slider" type="VSlider" parent="card/sliders"]
offset_left = -75.0
offset_top = 150.0
offset_right = -25.0
offset_bottom = 350.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="time_slider" type="VSlider" parent="card/sliders"]
z_index = 3
offset_left = 225.0
offset_top = 150.0
offset_right = 275.0
offset_bottom = 350.0
max_value = 600.0
step = 5.0

[node name="maturity_slider" type="VSlider" parent="card/sliders"]
offset_left = 125.0
offset_top = 150.0
offset_right = 175.0
offset_bottom = 350.0
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bpgj4")
}

[node name="close_button" type="Button" parent="."]
offset_left = -275.0
offset_top = 625.0
offset_right = -253.0
offset_bottom = 647.0
scale = Vector2(6.8, 6.8)
theme = ExtResource("6_4fe4i")
icon = ExtResource("6_0e2l7")

[node name="expand_button" type="Button" parent="."]
offset_left = 125.0
offset_top = 625.0
offset_right = 147.0
offset_bottom = 647.0
scale = Vector2(6.8, 6.8)
theme = ExtResource("6_4fe4i")
icon = ExtResource("6_aj1ct")

[node name="flip_button" type="Button" parent="."]
offset_left = -75.0
offset_top = 625.0
offset_right = -42.0
offset_bottom = 658.0
scale = Vector2(4.533, 4.533)
theme = ExtResource("6_4fe4i")
icon = ExtResource("11_1sp60")
icon_alignment = 1

[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="expand_button" to="." method="_on_expand_button_pressed"]
[connection signal="pressed" from="flip_button" to="." method="_on_flip_button_pressed"]
